fix gaps

--- a/shared.module.css
+++ b/shared.module.css
@@ -5,7 +5,7 @@
 }
 
 .gap {
-  gap: 20px;
+  gap: 10px;
 }
 
 .column {
